migrated to Java17, some cleanup